@@ -234,9 +234,9 @@
         to display the <guilabel>Find</guilabel> pane.</para></listitem>
         <listitem><para>Type the text you want to find inside the <guilabel>Search</guilabel>
         entry.</para></listitem>
-        <listitem><para>To find the next occurrence of the text, click <guibutton>Find Next</guibutton>.
+        <listitem><para>To find the next occurrence of the text, click <guibutton>Next</guibutton>.
         To find the previous occurrence of the text, click
-        <guibutton>Find Previous</guibutton>.</para></listitem>
+        <guibutton>Previous</guibutton>.</para></listitem>
       </orderedlist>
     
     </sect2>
@@ -259,7 +259,8 @@
         <screenshot> 
           <mediaobject>
             <imageobject>
-              <imagedata fileref="figures/gnome-dictionary-sources.png" format="PNG"/>
+	      3C
+              <imagedata fileref="figures/gnome-dictionary-preferences-source.png" format="PNG"/>
             </imageobject>
             <textobject><phrase>Shows the Source tab of the Preferences dialog.</phrase></textobject> 
           </mediaobject>
@@ -314,7 +315,7 @@
         <screenshot> 
           <mediaobject>
             <imageobject>
-              <imagedata fileref="figures/gnome-dictionary-print.png" format="PNG"/>
+              <imagedata fileref="figures/gnome-dictionary-preferences-print.png" format="PNG"/>
             </imageobject>
             <textobject><phrase>Shows the Print tab inside the Preferences dialog.</phrase></textobject> 
           </mediaobject>
