@@ -1,5 +1,16 @@
 2005-12-31  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
+	A C/figures/gnome-dictionary-add-source.png
+	A C/figures/gnome-dictionary-applet-window.png
+	A C/figures/gnome-dictionary-preferences-print.png
+	A C/figures/gnome-dictionary-preferences-source.png
+
+	* C/figures/*: add new figures for the manual.
+
+	* C/gnome-dictionary.xml: fix find buttons name.
+
+2005-12-31  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
 	A C/figures/gnome-dictionary-find.png
 	A C/figures/gnome-dictionary-lookup.png
 	D C/figures/gnome-dictionary-preferences-1.png
